# vsjump

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: everything_search.cpp  everything_search.h  main.cpp  path_utils.cpp  path_utils.h  picker_dialog.cpp  picker_dialog.h  protocol_register.cpp  protocol_register.h  url_parser.cpp  url_parser.h  vs_locator.cpp  vs_locator.h  vsjump.manifest
